// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LeadBlockSection tests When user navigates with selected systems query string should render back to your selection button 1`] = `
<div>
  <div
    class="Section-root Section-white css-1mk712f"
    data-testid="system-details-lead-block-section"
  >
    <div
      class=" css-ze8cyt"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthXl css-15p7r21-MuiContainer-root"
      >
        <div
          class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-3 css-1y2mitp-MuiGrid2-root"
          data-testid="grid-container"
        >
          <div
            class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-lg-8 MuiGrid2-grid-xs-12 css-wuqcfn-MuiGrid2-root"
            data-testid="grid-item"
          >
            <div
              class="css-1yjvs5a"
            >
              <svg
                class="SystemDetailsLeadBlockSectionStyles-ctaContainer"
                data-testid="lead-block-brand-logo"
                viewBox="0 0 216 100"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M216 16H205.256V69.3655H216V16Z"
                  fill="#0085CF"
                />
                <path
                  d="M10.7438 29.1206H0V69.3655H10.7438V29.1206Z"
                  fill="#0085CF"
                />
                <path
                  d="M10.7438 16H0V26.2189H10.7438V16Z"
                  fill="#0085CF"
                />
                <path
                  d="M83.8265 59.2727C78.3297 59.2727 73.7073 54.6048 73.7073 49.0538C73.7073 43.5028 78.3297 38.8349 83.8265 38.8349C89.3233 38.8349 93.9456 43.5028 93.9456 49.0538C93.9456 54.8571 89.3233 59.2727 83.8265 59.2727ZM83.8265 28.2375C72.3331 28.2375 63.0885 37.5733 63.0885 49.18C63.0885 60.7866 72.3331 70.1224 83.8265 70.1224C95.3198 70.1224 104.564 60.7866 104.564 49.18C104.564 37.5733 95.3198 28.2375 83.8265 28.2375Z"
                  fill="#0085CF"
                />
                <path
                  d="M47.2227 50.82C46.3482 56.3711 41.1012 60.1558 35.6044 59.1466C30.1076 58.2634 26.3597 52.9647 27.3592 47.4137C28.3586 41.8627 33.4806 38.0779 38.9774 39.0872C43.1001 39.8442 46.4731 42.9981 47.2227 47.2876H57.9665C56.7172 35.807 46.598 27.3544 35.2296 28.3636C23.8612 29.4991 15.491 39.718 16.4905 51.0724C17.6148 62.5529 27.734 71.0056 38.9774 69.9963C48.9717 69.1132 56.967 61.039 57.7166 50.82H47.2227Z"
                  fill="#0085CF"
                />
                <path
                  d="M198.76 49.0538C198.76 37.4471 189.39 28.1113 178.022 28.1113C166.529 28.1113 157.284 37.5733 157.284 49.0538C157.284 60.5343 166.654 69.9963 178.022 69.9963C180.645 69.9963 183.269 69.3655 185.643 68.4824V55.7403C182.02 59.9035 175.648 60.5343 171.526 56.8757C167.403 53.2171 166.778 46.7829 170.401 42.6197C174.024 38.4564 180.396 37.8256 184.518 41.4842C186.767 43.5028 188.016 46.2783 188.016 49.18C188.016 49.18 188.016 49.18 188.016 49.3061V69.1132H198.635V49.0538H198.76Z"
                  fill="#0085CF"
                />
                <path
                  d="M130.674 28.2375C119.306 28.2375 109.936 37.5733 109.936 49.18V84H120.555V49.0538C120.555 43.3766 125.053 38.7087 130.674 38.7087C136.296 38.7087 140.918 43.2505 140.918 48.9276C140.918 54.6048 136.421 59.2727 130.799 59.2727C127.676 59.2727 124.803 58.0111 122.929 55.7403V68.4824C125.427 69.6178 127.926 69.9963 130.549 69.9963C142.043 69.9963 151.287 60.5343 151.287 49.0538C151.287 37.4471 142.168 28.2375 130.674 28.2375Z"
                  fill="#0085CF"
                />
              </svg>
            </div>
            <div
              class="css-1yjvs5a"
            >
              <h1
                class="MuiTypography-root MuiTypography-h1 Typography-underline css-1ojvxyg-MuiTypography-root"
                data-testid="system-lead-block-title"
              >
                lead Block section
              </h1>
            </div>
            <div
              class="SystemDetailsLeadBlockSectionStyles-ctaContainer css-1yjvs5a"
            >
              <a
                class="MuiButtonBase-root MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeLarge MuiButton-textSizeLarge MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeLarge MuiButton-textSizeLarge SystemDetailsLeadBlockSectionStyles-backToYourSelectionBtn css-1ioi680-MuiButtonBase-root-MuiButton-root"
                data-gtm="{"id":"cta-click1","label":"MC: sdp.leadBlock.backToYourSelection","action":"system-configurator-page?referer=sys_details"}"
                data-testid="system-lead-block-prev-page"
                href="system-configurator-page?referer=sys_details"
                tabindex="0"
              >
                <span
                  class="MuiButton-startIcon Button-startIcon Button-startIcon MuiButton-iconSizeLarge css-htszrh-MuiButton-startIcon"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                    data-testid="ArrowBackIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"
                    />
                  </svg>
                </span>
                MC: sdp.leadBlock.backToYourSelection
                <span
                  class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                />
              </a>
              <a
                class="MuiButtonBase-root MuiButton-root Button-root MuiButton-contained Button-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-root Button-root MuiButton-contained Button-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium SystemDetailsLeadBlockSectionStyles-quotationBtn css-1t4t4pf-MuiButtonBase-root-MuiButton-root"
                data-gtm="{"id":"cta-click1","action":"https://www.external.co.uk","label":"cta label"}"
                data-testid="system-lead-block-cta-action"
                href="https://www.external.co.uk"
                referrerpolicy="no-referrer"
                rel="noreferrer"
                tabindex="0"
                target="_blank"
              >
                cta label
                <span
                  class="MuiButton-endIcon MuiButton-iconSizeMedium css-9tj150-MuiButton-endIcon"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                    data-testid="ArrowForwardIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="m12 4-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
                    />
                  </svg>
                </span>
                <span
                  class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                />
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`LeadBlockSection tests should not render systemAttributes Card with empty uniqueSellingPropositions 1`] = `
<div>
  <div
    class="Section-root Section-white css-1mk712f"
    data-testid="system-details-lead-block-section"
  >
    <div
      class=" css-ze8cyt"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthXl css-15p7r21-MuiContainer-root"
      >
        <div
          class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-3 css-1y2mitp-MuiGrid2-root"
          data-testid="grid-container"
        >
          <div
            class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-lg-8 MuiGrid2-grid-xs-12 css-wuqcfn-MuiGrid2-root"
            data-testid="grid-item"
          >
            <div
              class="css-1yjvs5a"
            >
              <svg
                class="SystemDetailsLeadBlockSectionStyles-ctaContainer"
                data-testid="lead-block-brand-logo"
                viewBox="0 0 216 100"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M216 16H205.256V69.3655H216V16Z"
                  fill="#0085CF"
                />
                <path
                  d="M10.7438 29.1206H0V69.3655H10.7438V29.1206Z"
                  fill="#0085CF"
                />
                <path
                  d="M10.7438 16H0V26.2189H10.7438V16Z"
                  fill="#0085CF"
                />
                <path
                  d="M83.8265 59.2727C78.3297 59.2727 73.7073 54.6048 73.7073 49.0538C73.7073 43.5028 78.3297 38.8349 83.8265 38.8349C89.3233 38.8349 93.9456 43.5028 93.9456 49.0538C93.9456 54.8571 89.3233 59.2727 83.8265 59.2727ZM83.8265 28.2375C72.3331 28.2375 63.0885 37.5733 63.0885 49.18C63.0885 60.7866 72.3331 70.1224 83.8265 70.1224C95.3198 70.1224 104.564 60.7866 104.564 49.18C104.564 37.5733 95.3198 28.2375 83.8265 28.2375Z"
                  fill="#0085CF"
                />
                <path
                  d="M47.2227 50.82C46.3482 56.3711 41.1012 60.1558 35.6044 59.1466C30.1076 58.2634 26.3597 52.9647 27.3592 47.4137C28.3586 41.8627 33.4806 38.0779 38.9774 39.0872C43.1001 39.8442 46.4731 42.9981 47.2227 47.2876H57.9665C56.7172 35.807 46.598 27.3544 35.2296 28.3636C23.8612 29.4991 15.491 39.718 16.4905 51.0724C17.6148 62.5529 27.734 71.0056 38.9774 69.9963C48.9717 69.1132 56.967 61.039 57.7166 50.82H47.2227Z"
                  fill="#0085CF"
                />
                <path
                  d="M198.76 49.0538C198.76 37.4471 189.39 28.1113 178.022 28.1113C166.529 28.1113 157.284 37.5733 157.284 49.0538C157.284 60.5343 166.654 69.9963 178.022 69.9963C180.645 69.9963 183.269 69.3655 185.643 68.4824V55.7403C182.02 59.9035 175.648 60.5343 171.526 56.8757C167.403 53.2171 166.778 46.7829 170.401 42.6197C174.024 38.4564 180.396 37.8256 184.518 41.4842C186.767 43.5028 188.016 46.2783 188.016 49.18C188.016 49.18 188.016 49.18 188.016 49.3061V69.1132H198.635V49.0538H198.76Z"
                  fill="#0085CF"
                />
                <path
                  d="M130.674 28.2375C119.306 28.2375 109.936 37.5733 109.936 49.18V84H120.555V49.0538C120.555 43.3766 125.053 38.7087 130.674 38.7087C136.296 38.7087 140.918 43.2505 140.918 48.9276C140.918 54.6048 136.421 59.2727 130.799 59.2727C127.676 59.2727 124.803 58.0111 122.929 55.7403V68.4824C125.427 69.6178 127.926 69.9963 130.549 69.9963C142.043 69.9963 151.287 60.5343 151.287 49.0538C151.287 37.4471 142.168 28.2375 130.674 28.2375Z"
                  fill="#0085CF"
                />
              </svg>
            </div>
            <div
              class="css-1yjvs5a"
            >
              <h1
                class="MuiTypography-root MuiTypography-h1 Typography-underline css-1ojvxyg-MuiTypography-root"
                data-testid="system-lead-block-title"
              >
                lead Block section
              </h1>
            </div>
            <div
              class="SystemDetailsLeadBlockSectionStyles-ctaContainer css-1yjvs5a"
            >
              <a
                class="MuiButtonBase-root MuiButton-root Button-root MuiButton-contained Button-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-root Button-root MuiButton-contained Button-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium SystemDetailsLeadBlockSectionStyles-quotationBtn css-1t4t4pf-MuiButtonBase-root-MuiButton-root"
                data-gtm="{"id":"cta-click1","action":"https://www.external.co.uk","label":"cta label"}"
                data-testid="system-lead-block-cta-action"
                href="https://www.external.co.uk"
                referrerpolicy="no-referrer"
                rel="noreferrer"
                tabindex="0"
                target="_blank"
              >
                cta label
                <span
                  class="MuiButton-endIcon MuiButton-iconSizeMedium css-9tj150-MuiButton-endIcon"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                    data-testid="ArrowForwardIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="m12 4-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
                    />
                  </svg>
                </span>
                <span
                  class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                />
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`LeadBlockSection tests should render 1`] = `
<div>
  <div
    class="Section-root Section-white css-1mk712f"
    data-testid="system-details-lead-block-section"
  >
    <div
      class=" css-ze8cyt"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthXl css-15p7r21-MuiContainer-root"
      >
        <div
          class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-3 css-1y2mitp-MuiGrid2-root"
          data-testid="grid-container"
        >
          <div
            class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-lg-8 MuiGrid2-grid-xs-12 css-wuqcfn-MuiGrid2-root"
            data-testid="grid-item"
          >
            <div
              class="css-1yjvs5a"
            >
              <svg
                class="SystemDetailsLeadBlockSectionStyles-ctaContainer"
                data-testid="lead-block-brand-logo"
                viewBox="0 0 216 100"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M216 16H205.256V69.3655H216V16Z"
                  fill="#0085CF"
                />
                <path
                  d="M10.7438 29.1206H0V69.3655H10.7438V29.1206Z"
                  fill="#0085CF"
                />
                <path
                  d="M10.7438 16H0V26.2189H10.7438V16Z"
                  fill="#0085CF"
                />
                <path
                  d="M83.8265 59.2727C78.3297 59.2727 73.7073 54.6048 73.7073 49.0538C73.7073 43.5028 78.3297 38.8349 83.8265 38.8349C89.3233 38.8349 93.9456 43.5028 93.9456 49.0538C93.9456 54.8571 89.3233 59.2727 83.8265 59.2727ZM83.8265 28.2375C72.3331 28.2375 63.0885 37.5733 63.0885 49.18C63.0885 60.7866 72.3331 70.1224 83.8265 70.1224C95.3198 70.1224 104.564 60.7866 104.564 49.18C104.564 37.5733 95.3198 28.2375 83.8265 28.2375Z"
                  fill="#0085CF"
                />
                <path
                  d="M47.2227 50.82C46.3482 56.3711 41.1012 60.1558 35.6044 59.1466C30.1076 58.2634 26.3597 52.9647 27.3592 47.4137C28.3586 41.8627 33.4806 38.0779 38.9774 39.0872C43.1001 39.8442 46.4731 42.9981 47.2227 47.2876H57.9665C56.7172 35.807 46.598 27.3544 35.2296 28.3636C23.8612 29.4991 15.491 39.718 16.4905 51.0724C17.6148 62.5529 27.734 71.0056 38.9774 69.9963C48.9717 69.1132 56.967 61.039 57.7166 50.82H47.2227Z"
                  fill="#0085CF"
                />
                <path
                  d="M198.76 49.0538C198.76 37.4471 189.39 28.1113 178.022 28.1113C166.529 28.1113 157.284 37.5733 157.284 49.0538C157.284 60.5343 166.654 69.9963 178.022 69.9963C180.645 69.9963 183.269 69.3655 185.643 68.4824V55.7403C182.02 59.9035 175.648 60.5343 171.526 56.8757C167.403 53.2171 166.778 46.7829 170.401 42.6197C174.024 38.4564 180.396 37.8256 184.518 41.4842C186.767 43.5028 188.016 46.2783 188.016 49.18C188.016 49.18 188.016 49.18 188.016 49.3061V69.1132H198.635V49.0538H198.76Z"
                  fill="#0085CF"
                />
                <path
                  d="M130.674 28.2375C119.306 28.2375 109.936 37.5733 109.936 49.18V84H120.555V49.0538C120.555 43.3766 125.053 38.7087 130.674 38.7087C136.296 38.7087 140.918 43.2505 140.918 48.9276C140.918 54.6048 136.421 59.2727 130.799 59.2727C127.676 59.2727 124.803 58.0111 122.929 55.7403V68.4824C125.427 69.6178 127.926 69.9963 130.549 69.9963C142.043 69.9963 151.287 60.5343 151.287 49.0538C151.287 37.4471 142.168 28.2375 130.674 28.2375Z"
                  fill="#0085CF"
                />
              </svg>
            </div>
            <div
              class="css-1yjvs5a"
            >
              <h1
                class="MuiTypography-root MuiTypography-h1 Typography-underline css-1ojvxyg-MuiTypography-root"
                data-testid="system-lead-block-title"
              >
                lead Block section
              </h1>
            </div>
            <div
              class="SystemDetailsLeadBlockSectionStyles-ctaContainer css-1yjvs5a"
            >
              <a
                class="MuiButtonBase-root MuiButton-root Button-root MuiButton-contained Button-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-root Button-root MuiButton-contained Button-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium SystemDetailsLeadBlockSectionStyles-quotationBtn css-1t4t4pf-MuiButtonBase-root-MuiButton-root"
                data-gtm="{"id":"cta-click1","action":"https://www.external.co.uk","label":"cta label"}"
                data-testid="system-lead-block-cta-action"
                href="https://www.external.co.uk"
                referrerpolicy="no-referrer"
                rel="noreferrer"
                tabindex="0"
                target="_blank"
              >
                cta label
                <span
                  class="MuiButton-endIcon MuiButton-iconSizeMedium css-9tj150-MuiButton-endIcon"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                    data-testid="ArrowForwardIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="m12 4-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
                    />
                  </svg>
                </span>
                <span
                  class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                />
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`LeadBlockSection tests should render with uniqueSellingPropositions 1`] = `
<div>
  <div
    class="Section-root Section-white css-1mk712f"
    data-testid="system-details-lead-block-section"
  >
    <div
      class=" css-ze8cyt"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthXl css-15p7r21-MuiContainer-root"
      >
        <div
          class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-3 css-1y2mitp-MuiGrid2-root"
          data-testid="grid-container"
        >
          <div
            class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-lg-8 MuiGrid2-grid-xs-12 css-wuqcfn-MuiGrid2-root"
            data-testid="grid-item"
          >
            <div
              class="css-1yjvs5a"
            >
              <svg
                class="SystemDetailsLeadBlockSectionStyles-ctaContainer"
                data-testid="lead-block-brand-logo"
                viewBox="0 0 216 100"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M216 16H205.256V69.3655H216V16Z"
                  fill="#0085CF"
                />
                <path
                  d="M10.7438 29.1206H0V69.3655H10.7438V29.1206Z"
                  fill="#0085CF"
                />
                <path
                  d="M10.7438 16H0V26.2189H10.7438V16Z"
                  fill="#0085CF"
                />
                <path
                  d="M83.8265 59.2727C78.3297 59.2727 73.7073 54.6048 73.7073 49.0538C73.7073 43.5028 78.3297 38.8349 83.8265 38.8349C89.3233 38.8349 93.9456 43.5028 93.9456 49.0538C93.9456 54.8571 89.3233 59.2727 83.8265 59.2727ZM83.8265 28.2375C72.3331 28.2375 63.0885 37.5733 63.0885 49.18C63.0885 60.7866 72.3331 70.1224 83.8265 70.1224C95.3198 70.1224 104.564 60.7866 104.564 49.18C104.564 37.5733 95.3198 28.2375 83.8265 28.2375Z"
                  fill="#0085CF"
                />
                <path
                  d="M47.2227 50.82C46.3482 56.3711 41.1012 60.1558 35.6044 59.1466C30.1076 58.2634 26.3597 52.9647 27.3592 47.4137C28.3586 41.8627 33.4806 38.0779 38.9774 39.0872C43.1001 39.8442 46.4731 42.9981 47.2227 47.2876H57.9665C56.7172 35.807 46.598 27.3544 35.2296 28.3636C23.8612 29.4991 15.491 39.718 16.4905 51.0724C17.6148 62.5529 27.734 71.0056 38.9774 69.9963C48.9717 69.1132 56.967 61.039 57.7166 50.82H47.2227Z"
                  fill="#0085CF"
                />
                <path
                  d="M198.76 49.0538C198.76 37.4471 189.39 28.1113 178.022 28.1113C166.529 28.1113 157.284 37.5733 157.284 49.0538C157.284 60.5343 166.654 69.9963 178.022 69.9963C180.645 69.9963 183.269 69.3655 185.643 68.4824V55.7403C182.02 59.9035 175.648 60.5343 171.526 56.8757C167.403 53.2171 166.778 46.7829 170.401 42.6197C174.024 38.4564 180.396 37.8256 184.518 41.4842C186.767 43.5028 188.016 46.2783 188.016 49.18C188.016 49.18 188.016 49.18 188.016 49.3061V69.1132H198.635V49.0538H198.76Z"
                  fill="#0085CF"
                />
                <path
                  d="M130.674 28.2375C119.306 28.2375 109.936 37.5733 109.936 49.18V84H120.555V49.0538C120.555 43.3766 125.053 38.7087 130.674 38.7087C136.296 38.7087 140.918 43.2505 140.918 48.9276C140.918 54.6048 136.421 59.2727 130.799 59.2727C127.676 59.2727 124.803 58.0111 122.929 55.7403V68.4824C125.427 69.6178 127.926 69.9963 130.549 69.9963C142.043 69.9963 151.287 60.5343 151.287 49.0538C151.287 37.4471 142.168 28.2375 130.674 28.2375Z"
                  fill="#0085CF"
                />
              </svg>
            </div>
            <div
              class="css-1yjvs5a"
            >
              <h1
                class="MuiTypography-root MuiTypography-h1 Typography-underline css-1ojvxyg-MuiTypography-root"
                data-testid="system-lead-block-title"
              >
                lead Block section
              </h1>
            </div>
            <div
              class="SystemDetailsLeadBlockSectionStyles-ctaContainer css-1yjvs5a"
            >
              <a
                class="MuiButtonBase-root MuiButton-root Button-root MuiButton-contained Button-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-root Button-root MuiButton-contained Button-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium SystemDetailsLeadBlockSectionStyles-quotationBtn css-1t4t4pf-MuiButtonBase-root-MuiButton-root"
                data-gtm="{"id":"cta-click1","action":"https://www.external.co.uk","label":"cta label"}"
                data-testid="system-lead-block-cta-action"
                href="https://www.external.co.uk"
                referrerpolicy="no-referrer"
                rel="noreferrer"
                tabindex="0"
                target="_blank"
              >
                cta label
                <span
                  class="MuiButton-endIcon MuiButton-iconSizeMedium css-9tj150-MuiButton-endIcon"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                    data-testid="ArrowForwardIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="m12 4-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
                    />
                  </svg>
                </span>
                <span
                  class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                />
              </a>
            </div>
          </div>
          <div
            class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-lg-4 MuiGrid2-grid-xs-12 SystemDetailsLeadBlockSectionStyles-card css-1fx28h6-MuiGrid2-root"
            data-testid="system-attributes-card"
          >
            <div
              class="ColorPair-pearl css-1d0x0e2"
            >
              <div
                class="css-1qwqwtx"
              >
                <div
                  class="css-c1wgmr"
                >
                  <div
                    class="SystemDetailsLeadBlockSectionStyles-iconList"
                  >
                    <ul
                      class="css-1yuf2q3"
                    >
                      <li
                        class="IconList-isCompact css-6y5cxr"
                      >
                        <div
                          class="IconList-icon"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1bt3ayq-MuiSvgIcon-root"
                            data-testid="CheckIcon"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M9 16.17 4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
                            />
                          </svg>
                        </div>
                        <div
                          class="css-1lg3fd1"
                        >
                          <p
                            class="MuiTypography-root MuiTypography-body1  css-1o02bdp-MuiTypography-root"
                            data-testid="typography"
                          >
                            feature 1
                          </p>
                        </div>
                      </li>
                      <li
                        class="IconList-isCompact css-6y5cxr"
                      >
                        <div
                          class="IconList-icon"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1bt3ayq-MuiSvgIcon-root"
                            data-testid="CheckIcon"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M9 16.17 4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
                            />
                          </svg>
                        </div>
                        <div
                          class="css-1lg3fd1"
                        >
                          <p
                            class="MuiTypography-root MuiTypography-body1  css-1o02bdp-MuiTypography-root"
                            data-testid="typography"
                          >
                            feature 2
                          </p>
                        </div>
                      </li>
                    </ul>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
